fix: z-index on overlay

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -58,7 +58,7 @@
   height: 19.3px;
   border: none;
   position: absolute;
-  z-index: 999;
+  z-index: 800;
   top: 18px;
   right: 15px;
 }
